Upgrade and refactor ValidationService to use as a library
## ValidationService project

- migrate ValidationService project to netstandard2.0
- replace log4net with Microsoft.Extensions.Logging (when needed)
- replace LoggingService validation logging mechanism with ValidationOutput property to programmatically fetch the validation output
- remove LoggingService global logging mechanism because it was not more usable (and already throwing exceptions)
- remove ValidationResultCollection mechanism as it duplicates most validation errors
- mark LoggingService as obsolete
- upgrade/migrate CSVHelper from version 12.1.1 to 27.1.1

## ValidationTests project

- migrate ValidationTests project to net5.0
- upgrade/migrate CSVHelper from version 12.1.1 to 27.1.1
- fix test issues with CSVHelper & PackageValidator
- rewrote FullValidationTests to pass with all packages located in the DataSource folder

--- a/csv-validator/PackageValidation/ValidationServices/ValidationServices.csproj
+++ b/csv-validator/PackageValidation/ValidationServices/ValidationServices.csproj
@@ -1,41 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.0.0.0</Version>
-    <Authors>Programmers</Authors>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Company>SPCSS</Company>
     <Product>AISG AM Komunikacni rozhrani</Product>
-    <PackageId>PackageValidationServices</PackageId>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
-    <Description>Description here</Description>
     <Copyright>Copyright 2019 SPCSS</Copyright>
-    <PackageLicenseUrl>License URL</PackageLicenseUrl>
-    <PackageProjectUrl>Project URL</PackageProjectUrl>
-    <PackageIconUrl>Icon URL</PackageIconUrl>
-    <RepositoryUrl>Repo URL</RepositoryUrl>
-    <RepositoryType>Repo type</RepositoryType>
-    <PackageTags>Tags</PackageTags>
-    <PackageReleaseNotes>Release</PackageReleaseNotes>  
   </PropertyGroup>
 
-  
-
-
-
-  
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="15.0.5" />
+    <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
-  </ItemGroup>
 
   <ItemGroup>
-    <None Update="../ValidationServices/SchemaSource/**">
+    <None Update="SchemaSource/**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="structureSourceSettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
