Upgrade and refactor ValidationService to use as a library
## ValidationService project

- migrate ValidationService project to netstandard2.0
- replace log4net with Microsoft.Extensions.Logging (when needed)
- replace LoggingService validation logging mechanism with ValidationOutput property to programmatically fetch the validation output
- remove LoggingService global logging mechanism because it was not more usable (and already throwing exceptions)
- remove ValidationResultCollection mechanism as it duplicates most validation errors
- mark LoggingService as obsolete
- upgrade/migrate CSVHelper from version 12.1.1 to 27.1.1

## ValidationTests project

- migrate ValidationTests project to net5.0
- upgrade/migrate CSVHelper from version 12.1.1 to 27.1.1
- fix test issues with CSVHelper & PackageValidator
- rewrote FullValidationTests to pass with all packages located in the DataSource folder

--- a/csv-validator/PackageValidation/ValidationTests/ValidationTests.csproj
+++ b/csv-validator/PackageValidation/ValidationTests/ValidationTests.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -13,10 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="12.1.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.10.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
@@ -24,13 +24,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ValidationServices\ValidationServices.csproj" />
-    <ProjectReference Include="..\PackageValidation\PackageValidation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\ValidationServices\App.config" Link="App.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="..\ValidationServices\SchemaSource\codebook.csv" Link="SchemaSource\codebook.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
