--- a/csv-validator/PackageValidation/ValidationServices/ValidationServices.csproj
+++ b/csv-validator/PackageValidation/ValidationServices/ValidationServices.csproj
@@ -10,12 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="29.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
-
-    <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
-    <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="SchemaSource/**">
